-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# Internal Error (/oracle/valhallaL/open/src/hotspot/share/opto/phaseX.cpp:853), pid=20200, tid=20208
# assert(i->_idx >= k->_idx) failed: Idealize should return new nodes, use Identity to return old nodes
Current CompileTask:
C2: 701 587 % ! 4 nsk.share.runner.ThreadsRunner$ManagedThread::run @ 27 (151 bytes)
Stack: [0x00007f5d6f14d000,0x00007f5d6f24e000], sp=0x00007f5d6f249690, free space=1009k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15b9bd4] PhaseGVN::transform_no_reclaim(Node*)+0x274
V [libjvm.so+0xdcb8b5] GraphKit::make_load(Node*, Node*, Type const*, BasicType, int, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool, bool)+0x115
V [libjvm.so+0xddc867] GraphKit::make_load(Node*, Node*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool, bool)+0xd7
V [libjvm.so+0x1207c8e] LibraryCallKit::inline_native_hashcode(bool, bool)+0x49e
V [libjvm.so+0x12187ac] LibraryIntrinsic::generate(JVMState*)+0x2ec
V [libjvm.so+0xc1a5f1] Parse::do_call()+0x4c1
V [libjvm.so+0x1573427] Parse::do_one_bytecode()+0x1a67
V [libjvm.so+0x1560978] Parse::do_one_block()+0x3a8
V [libjvm.so+0x1561390] Parse::do_all_blocks()+0x50
V [libjvm.so+0x1564bb4] Parse::Parse(JVMState*, ciMethod*, float)+0xd04
V [libjvm.so+0x8568c8] ParseGenerator::generate(JVMState*)+0x1a8
V [libjvm.so+0x85bca0] PredictedCallGenerator::generate(JVMState*)+0x3f0
V [libjvm.so+0xc1a5f1] Parse::do_call()+0x4c1
V [libjvm.so+0x1573427] Parse::do_one_bytecode()+0x1a67
V [libjvm.so+0x1560978] Parse::do_one_block()+0x3a8
V [libjvm.so+0x1561390] Parse::do_all_blocks()+0x50
V [libjvm.so+0x1564bb4] Parse::Parse(JVMState*, ciMethod*, float)+0xd04
V [libjvm.so+0x8568c8] ParseGenerator::generate(JVMState*)+0x1a8
V [libjvm.so+0x85bca0] PredictedCallGenerator::generate(JVMState*)+0x3f0
V [libjvm.so+0xc1a5f1] Parse::do_call()+0x4c1
V [libjvm.so+0x1573427] Parse::do_one_bytecode()+0x1a67
V [libjvm.so+0x1560978] Parse::do_one_block()+0x3a8
V [libjvm.so+0x1561390] Parse::do_all_blocks()+0x50
V [libjvm.so+0x1564bb4] Parse::Parse(JVMState*, ciMethod*, float)+0xd04
V [libjvm.so+0x8568c8] ParseGenerator::generate(JVMState*)+0x1a8
V [libjvm.so+0xa4b3a6] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x10e6
V [libjvm.so+0x853e52] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2f2
V [libjvm.so+0xa58884] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3a4
V [libjvm.so+0xa5967f] CompileBroker::compiler_thread_loop()+0x3af
V [libjvm.so+0x193774a] JavaThread::thread_main_inner()+0x1da
V [libjvm.so+0x193dcab] Thread::call_run()+0xfb
V [libjvm.so+0x150a145] thread_native_entry(Thread*)+0x115
# assert(i->_idx >= k->_idx) failed: Idealize should return new nodes, use Identity to return old nodes
Current CompileTask:
C2: 701 587 % ! 4 nsk.share.runner.ThreadsRunner$ManagedThread::run @ 27 (151 bytes)
Stack: [0x00007f5d6f14d000,0x00007f5d6f24e000], sp=0x00007f5d6f249690, free space=1009k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15b9bd4] PhaseGVN::transform_no_reclaim(Node*)+0x274
V [libjvm.so+0xdcb8b5] GraphKit::make_load(Node*, Node*, Type const*, BasicType, int, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool, bool)+0x115
V [libjvm.so+0xddc867] GraphKit::make_load(Node*, Node*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool, bool)+0xd7
V [libjvm.so+0x1207c8e] LibraryCallKit::inline_native_hashcode(bool, bool)+0x49e
V [libjvm.so+0x12187ac] LibraryIntrinsic::generate(JVMState*)+0x2ec
V [libjvm.so+0xc1a5f1] Parse::do_call()+0x4c1
V [libjvm.so+0x1573427] Parse::do_one_bytecode()+0x1a67
V [libjvm.so+0x1560978] Parse::do_one_block()+0x3a8
V [libjvm.so+0x1561390] Parse::do_all_blocks()+0x50
V [libjvm.so+0x1564bb4] Parse::Parse(JVMState*, ciMethod*, float)+0xd04
V [libjvm.so+0x8568c8] ParseGenerator::generate(JVMState*)+0x1a8
V [libjvm.so+0x85bca0] PredictedCallGenerator::generate(JVMState*)+0x3f0
V [libjvm.so+0xc1a5f1] Parse::do_call()+0x4c1
V [libjvm.so+0x1573427] Parse::do_one_bytecode()+0x1a67
V [libjvm.so+0x1560978] Parse::do_one_block()+0x3a8
V [libjvm.so+0x1561390] Parse::do_all_blocks()+0x50
V [libjvm.so+0x1564bb4] Parse::Parse(JVMState*, ciMethod*, float)+0xd04
V [libjvm.so+0x8568c8] ParseGenerator::generate(JVMState*)+0x1a8
V [libjvm.so+0x85bca0] PredictedCallGenerator::generate(JVMState*)+0x3f0
V [libjvm.so+0xc1a5f1] Parse::do_call()+0x4c1
V [libjvm.so+0x1573427] Parse::do_one_bytecode()+0x1a67
V [libjvm.so+0x1560978] Parse::do_one_block()+0x3a8
V [libjvm.so+0x1561390] Parse::do_all_blocks()+0x50
V [libjvm.so+0x1564bb4] Parse::Parse(JVMState*, ciMethod*, float)+0xd04
V [libjvm.so+0x8568c8] ParseGenerator::generate(JVMState*)+0x1a8
V [libjvm.so+0xa4b3a6] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x10e6
V [libjvm.so+0x853e52] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2f2
V [libjvm.so+0xa58884] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3a4
V [libjvm.so+0xa5967f] CompileBroker::compiler_thread_loop()+0x3af
V [libjvm.so+0x193774a] JavaThread::thread_main_inner()+0x1da
V [libjvm.so+0x193dcab] Thread::call_run()+0xfb
V [libjvm.so+0x150a145] thread_native_entry(Thread*)+0x115
- relates to
-
JDK-8206144 [lworld] Adapt and add C2 intrinsics for value types Unsafe API
-
- Resolved
-