8219572: [lworld] vmTestbase/gc/ArrayJuggle/* tests fail with Idealize should return new nodes

Reviewed-by: roland